cambio archivos index 2
Cambie nombre de archivo

--- a/1FRS.html
+++ b/1FRS.html
@@ -33,7 +33,7 @@
 
 	<nav>
 		<ul class="menu">
-			<li><a href="Fundacion.html">NUESTRA PAGINA PRINCIPAL</a></li>
+			<li><a href="index.html">NUESTRA PAGINA PRINCIPAL</a></li>
 
 		 </ul>
 </nav>
