--- a/index.html
+++ b/index.html
@@ -55,13 +55,10 @@
 			</figcaption>
 
 			<p>
-				La Fundacion Rescatando Sueños es una entidad sin animo de lucro que tiene como objetivo asistir a los niños que necesitan asistir a consultas o terapias en la capital de la Republica que son poblacion vulnerable y que provienen de las diferentes regiones del pais y no cuentan con los recursos necesarios para su manutencion, estadia y desplazamientos en la ciudad de Bogota</p>
+				La Fundacion Rescatando Sueños es una entidad sin animo de lucro que tiene como objetivo acompañar y tratar a los niños que necesitan asistir a consultas o terapias en la capital de la Republica, que se identifiquen como poblacion vulnerable y que provienen de las diferentes regiones del pais y no cuentan con los recursos necesarios para su manutencion, estadia y desplazamientos en la ciudad de Bogota</p>
 			<p> Brindamos servicios de acompañamiento, hospitalizacion y recuperacion enfocados en la terapia de la risa, ya que estamos convencidos que si podemos generar momentos de calidad ayudaremos a nuestros niños y niñas a pasar de soñar por un futuro a ser los actores principales en la construccion de ese futuro para ellos, sus familias y la sociedad Colombiana.
 
 			</p>
-
-<video>https://www.youtube.com/watch?v=5AV9zJH2n_Y</video>
-
 
 	</article>
 </section>
@@ -82,7 +79,6 @@
 </aside>
 
 <footer><h3>Copyright Todos Los Derechos Reservados</h3></footer>
-
 
 
 </div>
