--- a/3FRS.html
+++ b/3FRS.html
@@ -33,7 +33,7 @@
 
 	<nav>
 		<ul class="menu">
-			<li><a href="Fundacion.html">NUESTRA PAGINA PRINCIPAL</a></li>
+			<li><a href="index.html">NUESTRA PAGINA PRINCIPAL</a></li>
 
 		 </ul>
 </nav>
