--- a/4FRS.html
+++ b/4FRS.html
@@ -47,8 +47,8 @@
 			<p> Por Medio de la terapia de la risa y con los mejores medicos nuestra fundacion mejora la calidad de vida y permite aumentar las expectativas de recuperacion para que nuestros niños puedan ser quienes contruyan un mejor futuro, en donde los sueños de las familiar se vuelvan realidad</p>
 
 
-			
-<iframe class="youtube-player" type="text/html" width="540" height="355" src="http://www.youtube.com/embed/tlorpVLJOvA" frameborder="0"></iframe>
+
+<iframe class="youtube-player" type="text/html" width="330px" height="200px" src="http://www.youtube.com/embed/tlorpVLJOvA" frameborder="0"></iframe>
 
 
 
