--- a/1FRS.html
+++ b/1FRS.html
@@ -54,6 +54,7 @@
 			
 			<p> En 1995 se suman a la fundacion la asociacion nacional de medicina clow y las jornadas de trabajo en la fundacion la hacen los trabajadores, medicos y enfermeras en jornadas extra laborales. Para el años de 1999, crece de tal tamaño la institucion que se debe realizar una reingenieria de la misma ya que se deben contratar personal de planta y se construye la sede actual gracias al apoyo de UNICEF, American Cancer Society y donaciones de las principales empresas de nuestro pais </p>
 
+<iframe class="youtube-player" type="text/html" width="330" height="200" src="http://www.youtube.com/embed/tlorpVLJOvA" frameborder="0"></iframe>
 
 
 	</article>
